initial commit of unworking JSON request.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 -->
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-vgzgppvLTR23tPpQSSXDAOs-Kjg4I_w"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key="></script>
 <script src="js/final.js" defer></script>
 <link rel="stylesheet" href="css/final.css">
 
