--- a/care-compass.html
+++ b/care-compass.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <head>
-	<title>Google Maps Tutorial</title>
+	<title>Care Compass - Care Facility Finder</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="user-scalable=no, initial-scale=1.0">
-
-
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-vgzgppvLTR23tPpQSSXDAOs-Kjg4I_w"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key="></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.11.2/lodash.js"></script>
 
 	<script src="js/care_compass.js" defer></script>
 	<link rel="stylesheet" href="css/care_compass.css">
-
 
 </head>
 
@@ -24,11 +21,12 @@
 
 	<div id='control' class='container'>
 		<!-- User Input goes here -->
-		<h1>Care <span id='save-icon' class="glyphicon glyphicon-zoom-in"></span></h1><h1>Compass</h1>
+		<h1>Care <span id='logo' class="glyphicon glyphicon-zoom-in"></span></h1><h1>Compass</h1>
 		<hr />
 		<h3>Care Facility Locator</h3>
 		<div id="spacer"></div>
 		
+		<h3>Search</h3>
 		<form id='search-form'>
 			<div class='form-group col-md-12'> <!-- can't get button and search box on same row with out setting grid -->
 
@@ -40,11 +38,17 @@
 	<div id='search-results'></div>
 	<div id="spacer"></div>
 
-	<p>Search by Criteria</p>
+	<!-- <p>Search by Criteria</p> -->
 
 	<div id="spacer"></div>
 	<hr />
-	<p>Footer</p>
+	<div id="search-container">
+	<p>Current Search Displayed on Map</p>
+	<div id="current-search">
+		<h6 id='search-criteria'> All Facilities</h6>	
+	</div>
+
+	</div>
 
 	</div>
 	<!-- 
