implemented basic text facility name search and map display/update.

--- a/care-compass.html
+++ b/care-compass.html
@@ -21,20 +21,20 @@
 
 	<div id='control' class='container'>
 		<!-- User Input goes here -->
-		<h1>Care <span id='logo' class="glyphicon glyphicon-zoom-in"></span></h1><h1>Compass</h1>
+		<h1>Care <span id='logo' class="glyphicon glyphicon-zoom-in"></span></h1><h2>Compass</h2>
 		<hr />
 		<h3>Care Facility Locator</h3>
 		<div id="spacer"></div>
 
 		<h3>Search</h3>
-		<form id='search-form'>
+		<!-- <form id='search-form'> -->
 			<div class='form-group col-md-12'> <!-- can't get button and search box on same row with out setting grid -->
 
 				<input id="search-by-name" class='col-md-8 form-control' type='text' placeholder="Search Facility Name">
 				<button id='search-by-name-btn' class='btn btn-default' type='button' >Search</button>
 
 			</div>
-		</form>
+		<!-- </form> -->
 	<div id='search-results'></div>
 	<div id="spacer"></div>
 
@@ -43,7 +43,7 @@
 	<div id="spacer"></div>
 	<hr />
 	<div id="search-container">
-	<p>Current Search Displayed on Map</p>
+	<h6>Current Search Displayed on Map</h6>
 	<div id="current-search">
 		<h6 id='search-criteria'> All Facilities</h6>
 	</div>
