implemented search tracking (display current search) and clear search button

--- a/care-compass.html
+++ b/care-compass.html
@@ -45,7 +45,8 @@
 	<div id="search-container">
 	<h6>Current Search Displayed on Map</h6>
 	<div id="current-search">
-		<h6 id='search-criteria'> All Facilities</h6>
+		<h6 id='search-criteria'> ALL Facilities</h6>
+		<button id='search-clear' class='btn btn-xs btn-danger' type='button' >Clear Search</button>
 	</div>
 
 	</div>
