--- a/care-compass.html
+++ b/care-compass.html
@@ -62,7 +62,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.11.2/lodash.js"></script>
-
+	<script src="js/facility_db.js" defer></script>
 	<script src="js/care_compass.js" defer></script>
 </body>
 </html>
