City search implemented. Search functions need to be combined. HTML needs work.

--- a/care-compass.html
+++ b/care-compass.html
@@ -5,10 +5,19 @@
 	<meta name="viewport" content="user-scalable=no, initial-scale=1.0">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
-
 	<link rel="stylesheet" href="css/care_compass.css">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+	
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+	<script src="https://maps.googleapis.com/maps/api/js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.11.2/lodash.js"></script>
+	<script src="js/facility_db.js" defer></script>
+	<script src="js/care_compass.js" defer></script>
+
 
 </head>
 
@@ -22,47 +31,38 @@
 		<h3>Care Facility Locator</h3>
 		<div id="spacer"></div>
 
-		<h3>Search</h3>
+		<h3>Begin</h3>
 		<!-- <form id='search-form'> -->
-			<div class='form-group col-md-12'> <!-- can't get button and search box on same row with out setting grid -->
+		<div class='form-group col-md-12'> <!-- can't get button and search box on same row with out setting grid? -->
 
-				<input id="search-by-name" class='col-md-8 form-control' type='text' placeholder="Search Facility Name">
-				<button id='search-by-name-btn' class='btn btn-default' type='button' >Search</button>
-
+			<input id="search-by-name" class='col-md-8 form-control' type='text' placeholder="Filter by Name">
+			<button id='search-by-name-btn' class='btn btn-default' type='button' >Search</button>
+			<h4>or</h4>
+			<div class="dropdown">
+				<button id="search-by-city-btn" class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Filter by City<span class="caret"></span></button>
+				<ul id="dynamic-city-list" class="dropdown-menu">
+				<!-- <li><a href="#">Add dynamic city list here</a></li> -->
+				</ul>
 			</div>
+
+		</div>
 		<!-- </form> -->
-	<div id='search-results'></div>
-	<div id="spacer"></div>
-
-	<!-- <p>Search by Criteria</p> -->
-
-	<div id="spacer"></div>
-	<hr />
-	<div id="search-container">
-	<h6>Current Search Displayed on Map</h6>
-	<div id="current-search">
-		<h6 id='search-criteria'> ALL Facilities</h6>
-		<button id='search-clear' class='btn btn-xs btn-danger' type='button' >Clear Search</button>
-	</div>
+		<div id='search-results'></div>
+		<hr />
+		<div id="search-container">
+			<h6>Current Search Displayed on Map</h6>
+			<div id="current-search">
+				<h6 id='search-criteria'> ALL Facilities</h6>
+				<button id='search-clear' class='btn btn-xs btn-danger' type='button' >Clear Search</button>
+			</div>
+		</div>
 
 	</div>
 
-	</div>
-	<!--
-	<button id='btnTerrain'>Terrain</button>
-	<button id='btnRoadmap'>Roadmap</button>
-	<button id='btnSatellite'>Satellite</button>
-	<button id='btnHybrid'>Hybrid</button>
- 	-->
 <div id="map-container"></div>
 
 
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.11.2/lodash.js"></script>
-	<script src="js/facility_db.js" defer></script>
-	<script src="js/care_compass.js" defer></script>
+
 </body>
 </html>
