fixed search bug after html refactor

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <div class="col-md-2">
           Facility Name:
       </div>
-      <div class="col-md-8" id="search-by-name">
-        <input class='col-md-8 form-control' type='text' placeholder="Filter by Facility Name">
+      <div class="col-md-8" id="search-by-name-div">
+        <input class='col-md-8 form-control' id="search-by-name" type='text' placeholder="Filter by Facility Name">
       </div>
       <div class="col-md-2" id='search-by-name-btn' >
         <button class='btn btn-default' type='button' >Search</button>
