Added config object and minor refactoring, bug fixes.

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       <div class="col-md-2">
           Facility Name:
       </div>
-      <div class="col-md-8" id="search-by-name-div">
-        <input class='col-md-8 form-control' id="search-by-name" type='text' placeholder="Filter by Facility Name">
+      <div class="col-md-6" id="search-by-name-div">
+        <input class='form-control' id="search-by-name" type='text' placeholder="Filter by Facility Name">
       </div>
-      <div class="col-md-2" id='search-by-name-btn' >
+      <div class="col-md-4" id='search-by-name-btn' >
         <button class='btn btn-default' type='button' >Search</button>
       </div>
     </div>
@@ -64,8 +64,10 @@
 
 <script src="https://maps.googleapis.com/maps/api/js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.11.2/lodash.js"></script>
+<script src="js/config.js" defer></script>
 <script src="js/mapping.js" defer></script>
 <script src="js/facility_db.js" defer></script>
 <script src="js/care_compass.js" defer></script>
+<script src="js/cached.js" defer></script>
 </body>
 </html>
