Implemented label-as-badge and .active on clicked facility

--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
       </div>
     </div>
 
-    <!-- </form> -->
-    <div id='search-results'></div>
+    <div id='search-results'>
+      <!-- <ul class='unstyled'></ul> -->
+
+    </div>
     <hr />
     <div id="search-container">
       <h6>Current Search Displayed on Map</h6>
