Moved getMarkerId() to method of Map.

--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
 <script src="js/mapping.js" defer></script>
 <script src="js/facility_db.js" defer></script>
 <script src="js/care_compass.js" defer></script>
-<script src="js/cached.js" defer></script>
+<script src="data/cached.js" defer></script>
 </body>
 </html>
