Implemented reciprocal map/facility selection & scroll list into focus.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <input class='form-control' id="search-by-name" type='text' placeholder="Filter by Facility Name">
       </div>
       <div class="col-md-4" id='search-by-name-btn' >
-        <button class='btn btn-default' type='button' >Search</button>
+        <button id="name-search-btn" class='btn btn-default' type='button' >Search</button>
       </div>
     </div>
     <div class="row">
